# vela

./: .gitignore  Cargo.toml  README.md
benches/: README.md  chunk_streaming.rs
docs/: ARCHITECTURE.md  MCA_DIFF.md  ROADMAP.md  WORLDGEN_PARITY.md
examples/: profile_features.rs  profile_gen.rs  profile_memory.rs  profile_noise.rs  profile_parallel.rs  profile_vd32.rs
src/: connection.rs  ids.rs  lib.rs  main.rs  mca_diff.rs  platform.rs  registries.rs  registry_tags.rs  runtime.rs
src/config/: eula.rs  mod.rs  players.rs  properties.rs
src/inventory/: container.rs  item_stack.rs  menu.rs  mod.rs  packets.rs  persistence.rs
src/net/: connection.rs  crypto.rs  frame.rs  mod.rs  play.rs  play_decode.rs  play_io.rs  stream.rs
src/protocol/: buffer.rs  framing.rs  mod.rs  nbt.rs  text.rs  uuid.rs  varint.rs
src/registry/: block_state.rs  builtin.rs  item.rs  mod.rs  tags.rs
src/sim/: bridge.rs  chat.rs  chunking.rs  commands.rs  components.rs  item_tick.rs  mob.rs  mod.rs  movement.rs  packet_handlers.rs  packets.rs  persistence.rs  player_lifecycle.rs  survival.rs  systems.rs  text.rs  world.rs  world_tick.rs
src/sim/commands/: handlers.rs  mod.rs  suggest.rs  tree.rs
src/sim/entity/: mod.rs  packets.rs  syncher.rs
src/world/: bitpack.rs  block_drop.rs  block_item.rs  chunk_data.rs  encoding.rs  heightmap.rs  light.rs  mod.rs  terrain.rs
src/world/storage/: chunk_nbt.rs  level_dat.rs  mod.rs  player_dat.rs  region.rs
tests/: blocks.rs  connection.rs  containers.rs  inventory.rs  items.rs  join.rs  mobs.rs  persistence.rs  presence.rs  respawn.rs
tests/common/: mod.rs
tools/mca_diff/: run_vanilla.ps1
