[package]
name = "vela"
version = "0.1.0"
edition = "2021"
description = "Vela — a clean-room Minecraft server (protocol 776 / MC 26.2) written in Rust"

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "io-util", "time", "sync"] }
# Core ECS only — default features drag in bevy_reflect/glam/wgpu/web-sys, none
# of which a server needs. `std` keeps the standard executor and collections.
bevy_ecs = { version = "0.18", default-features = false, features = ["std"] }
bytes = "1"
# zlib (deflate) for the post-Login compressed packet framing. Default features
# pull miniz_oxide — a pure-Rust backend, so no system zlib / C toolchain.
flate2 = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = "1"
md-5 = "0.10"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[profile.release]
opt-level = 3
lto = true
