[package]
name = "vela"
version = "0.1.0"
edition = "2021"
description = "Vela — a clean-room Minecraft server (protocol 776 / MC 26.2) written in Rust"

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "io-util", "time", "sync", "signal"] }
# Core ECS only — default features drag in bevy_reflect/glam/wgpu/web-sys, none
# of which a server needs. `std` keeps the standard executor and collections.
bevy_ecs = { version = "0.18", default-features = false, features = ["std"] }
bytes = "1"
# zlib (deflate) for the post-Login compressed packet framing. Default features
# pull miniz_oxide — a pure-Rust backend, so no system zlib / C toolchain.
flate2 = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = "1"
md-5 = "0.10"
# Online-mode secure transport. RSA for the login key exchange, AES (raw block
# cipher driven in CFB8 by hand) for the stream cipher, SHA-1 for the
# Minecraft server-id auth hash, and a CSPRNG for keygen + the verify token.
rsa = "0.9"
aes = "0.8"
sha1 = "0.10"
# SHA-256 for the worldgen biome-zoom seed (`BiomeManager.obfuscateSeed`).
sha2 = "0.10"
rand = "0.8"
# Lightweight blocking HTTP client for the Mojang `hasJoined` session call.
ureq = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
# FIGlet renderer for the startup wordmark. The Slant font is embedded at build
# time from assets/fonts/ (see print_banner), so no runtime asset lookup.
figlet-rs = "0.1"
# Query the terminal width so the startup banner can be centered on any OS.
terminal_size = "0.4"
# Derive `Display`/`Error` for typed error enums (e.g. `net::crypto::AuthError`)
# so they satisfy `std::error::Error` without hand-rolled boilerplate.
thiserror = "2"

[dev-dependencies]
# Statistics-driven micro-benchmark harness for the chunk-streaming benches
# under benches/. Dev-only; never linked into the shipped server.
criterion = "0.5"

# Measures how fast newly-visible chunks are generated + wire-encoded as a
# player crosses chunk boundaries — i.e. how quickly chunks appear when moving
# fast through the world. `harness = false` hands the binary to Criterion.
[[bench]]
name = "chunk_streaming"
harness = false

[profile.release]
opt-level = 3
lto = true

# The worldgen suite (Perlin/noise/density loops, full-chunk golden fixtures) is
# numeric-heavy and runs unbearably slow at the default debug `opt-level = 0`.
# Optimizing the test profile cuts the suite's wall time by roughly an order of
# magnitude for a modest one-time compile cost; debug-info is kept for backtraces.
[profile.test]
opt-level = 2
